started adding styles

--- a/src/src/index.html
+++ b/src/src/index.html
@@ -4,14 +4,17 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Vite App</title>
+		<title>Phaser Edit - Graphical Interface for Phaser Game Engine</title>
+
+		<link rel="stylesheet" href="./app.css" />
+		<link rel="stylesheet" href="./styles/home.css" />
 	</head>
 	<body>
-		<div class="phaser-edit-container">
+		<div class="flex flex-hor phaser-edit-container">
 			<div class="left-panel">
 				<p>Left Panel</p>
 			</div>
-			<div class="center-panel">
+			<div class="flex flex-col center-panel">
 				<div class="game-view">
 					<h3>Game View</h3>
 				</div>
